# ufabc-2025q2-projeto-dirigido

./: .gitignore  README.md
comparador/: Cargo.toml  parse-logs.py  run.sh
comparador/datasets/Kaggle/Brain Tumor MRI Dataset/: dataset.txt
comparador/datasets/Kaggle/Cards Image Dataset-Classification/: dataset.txt
comparador/datasets/open-images-dataset-v7/: comando.txt  dataset.txt  texto.txt
comparador/src/: lib.rs  main.rs  traits.rs  utils.rs
comparador/src/codecs/: mod.rs
comparador/src/metrics/: hash.rs  mod.rs
