[package]
name = "comparador"
description = "Comparador de técnicas e algoritmos de codificação de imagens"
version = "0.1.0"
edition = "2021"
authors = [
    "Guilherme Zaluchi <desenv@guilherme.zaluchi.com.br>",
    "Guilherme Zaluchi <guilherme.zaluchi@aluno.ufabc.edu.br>",
]
homepage = "https://github.com/guiga-zalu/"
repository = "https://github.com/guiga-zalu/"
categories = []
keywords = ["codification", "image", "compression", "metric", "cli"]
license-file = "LICENSE"
readme = "readme.MD"
publish = false
rust-version = "1.91.0"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
globwalk = "0.9.1"
# clap = { version = "4.5.42", features = ["derive", "cargo"] }
num-traits = "0.2.19"
# palette = "0.7.6"
rayon = "1.10.0"
simple-tqdm = { version = "0.2.0", features = ["rayon"] }
webp = "0.3.0"

[dependencies.image]
version = "0.25.6"
features = [
    "jpeg",
    "png",
    "avif-native",
    "avif",
    "default",
    "qoi",
    "color_quant",
]

[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "comparador"
path = "src/main.rs"
test = true
doctest = true
bench = true
doc = true
